--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,3 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/shortener?currentSchema=short
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres?currentSchema=short
 spring.datasource.username=postgres
 spring.datasource.password=shortener-password
